# omnireader

./: .gitignore  BZ2Reader.h  CMakeLists.txt  GZReader.h  PlainTextReader.cpp  PlainTextReader.h  README.md  omnibase.cpp  omnibase.h  omnireader.h  pyproject.toml  setup.py  test_lines.cpp
cppsrc/: CMakeLists.txt  GZReader.h  omnireader.cpp  omnireader.h  test_lines.cpp  test_seekntell.cpp
libomnireader/: CMakeLists.txt
libomnireader/include/: BZ2Reader.h  GZReader.h  PlainTextReader.h  omnireader.h
libomnireader/src/: omnireader.cpp
libomnireader/test/: test_lines.cpp  test_seekntell.cpp
omnireader/: CMakeLists.txt  __init__.py  groreader.pyx  libomnireader.pxd  linesupplier.pyx  xyzreader.pyx
pysrc/: __init__.py  groreader.pyx
